# OF_driven_2D_denoising

./: OF-driven_gaussian_denoising.ipynb  README.md  URLs.txt  _2D_OF_denoising.py  _2D_OF_denoising2.py  _2D_denoising.py  add_noise.ipynb  build_image.ipynb  build_stack.ipynb  gaussian_denoising.ipynb  pyproject.toml  requirements.txt
src/: OF_gaussian.ipynb  OF_random.ipynb  barb.ipynb
src/OF-driven_2D_denoising/: OF-driven_gaussian_denoising.ipynb  build_stack.ipynb  flow.py  gaussian.py
src/OF_driven_2D_denoising/: OF_gaussian.py  build_image.ipynb  gaussian.py
src/image_denoising/: OF-driven_gaussian_denoising.ipynb  OF_gaussian.py  OF_random.py  __init__.py  flow.py  flow_estimation.py  gaussian.py  gaussian_denoising.ipynb  random.py
tests/: add_noise.ipynb  barb.ipynb  build_image.ipynb  build_stack.ipynb  denoising.ipynb  gaussian_denoising.ipynb
