[build-system]
requires = ["hatchling", "setuptools", "setuptools-scm"]
#build-backend = "hatchling.build"
build-backend = "setuptools.build_meta"

[project]
name = "OF_driven_2D_denoising"
version = "0.0.1"
authors = [
  { name="Vicente González Ruiz", email="vruiz@ual.es" },
  { name="José Jesús Fernández Rodríguez", email="JJ.Fernandez@csic.es" },
]
description = "Image denoising methods for uncorrelated noise"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/microscopy-processing/OF_driven_2D_denoising"
"Bug Tracker" = "https://github.com/microscopy-processing/OF_driven_2D_denoising/issues"

